--- a/name-list/index.html
+++ b/name-list/index.html
@@ -1,19 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Prompt:wght@400;500&display=swap"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" href="assets/css/index.css" />
-    <title>ISD SGCU</title>
-  </head>
-  <body>
-    <h1>รายชื่อผู้ลงทะเบียน</h1>
-  </body>
-  <script src="script/index.js" type="text/javascript"></script>
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <section id="navbar">
+        <nav class="navbar">
+            <img src="image/logo.svg">
+        </nav>
+    </section>
+    <div class="container">
+        <header>
+            <h2>รายชื่อผู้ลงทะเบียน</h2>
+            <input type="text" id="search" placeholder="ค้นหา"></input>
+        </header>
+        <div id="userCard">
+        </div>
+    </div>
+
+
+
+    <script src="script.js"></script>
+    
+</body>
 </html>
